# HL2DM-Matchmaking

./: .gitignore  .gitmodules  README.md
mp/game/hl2mp_mm/: .gitignore  gameinfo.txt
mp/game/hl2mp_mm/cfg/: .gitignore  autoexec.cfg
mp/game/hl2mp_mm/user_custom/9a/: .gitignore
mp/game/hl2mp_mm/user_custom/c1/: .gitignore
mp/src/game/: gamenetworkingsockets_include.vpc
mp/src/game/client/: cdll_client_int.cpp  client_base.vpc  client_hl2mp.vpc
mp/src/game/client/hl2mp/: mm_client.cpp
mp/src/game/server/: server_hl2mp.vpc
mp/src/game/shared/: achievementmgr.cpp
mp/src/lib/public/: GameNetworkingSockets.lib  libcrypto.lib
mp/src/mm_server/: cbase.h  mm_server.cpp  mm_shared.cpp  mm_shared.h
mp/src/mm_server/vcpkg_mm_server/: CMakeLists.txt  vcpkg.json
mp/src/public/steam/: isteamnetworkingmessages.h  isteamnetworkingsockets.h  isteamnetworkingutils.h  isteamremotestorage.h  isteamuserstats.h  matchmakingtypes.h  steam_api.h
mp/src/vgui2/vgui_controls/: HTML.cpp
